--- a/m1/w1/d3/esercizio-d3/start-20220401T092253Z-001/start/assets/css/stile.css
+++ b/m1/w1/d3/esercizio-d3/start-20220401T092253Z-001/start/assets/css/stile.css
@@ -25,6 +25,10 @@ header h1{/*curriculum*/
     text-align: center;
 }
 
+hr{
+    border-bottom-style:dashed;
+}
+
 span{/*mario rossi*/
     color: rgb(6, 160, 183);
     background-color: white;
@@ -46,8 +50,8 @@ header h2{/*web developer*/
 
 main{
     text-align: center;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-left: 30px;
+    margin-right: 30px;
     line-height: 3.5rem;
 }
 
@@ -62,14 +66,16 @@ figcaption{
 
 main address{
     text-align: left;
-    font-weight: bold;
     line-height: 1rem;
 }
 
 main address a{
-    font-weight: lighter;
     color: brown;
     font-style: unset;
+}
+
+b{
+    font-weight: bold;
 }
 
 main p b{/*su di me*/
@@ -78,7 +84,7 @@ main p b{/*su di me*/
 }
 
 blockquote p{/*citazione*/
-    background-color: rgb(182, 182, 182);
+    background-color: rgb(214, 212, 212);
     font-style: italic;
     text-align: center;
     border-radius: 8px;
@@ -106,8 +112,7 @@ mark{/*votazione*/
 }
 
 a{/*epicode school*/
-    font-weight: lighter;
-    color: brown;
+    color:brown;
     font-style: unset;
 }
 
@@ -125,6 +130,7 @@ section div p{/*testo competenze*/
 section div ul li{/*elenchi*/
     text-align: left;
     line-height: 2rem;
+    margin-left: 50px;
 }
 
 section div dl dt{
