--- a/m1/w1/d4/esercizio-d4/start/assets/css/stile.css
+++ b/m1/w1/d4/esercizio-d4/start/assets/css/stile.css
@@ -1,20 +1,210 @@
 /* IMPOSTAZIONI GENERALI */
 html{
     font-family: 'Poppins', sans-serif;
-font-family: 'Raleway', sans-serif;
 }
 
 /* HEADER */
+
+
+body{
+    background-image: url(..//img/sfondo.png);
+    background-attachment: fixed;
+    padding: 20px;
+}
+
+.container{/*quadrato*/
+    background-color: rgb(13, 144, 144);
+    height: 350px;
+    width: 395px;
+}
+
+header img{/*immagine*/
+    margin-top: 40px;
+}
+
+header p{/*blog developers*/
+    font-size: 20px;
+    text-transform: uppercase;
+    color: white;
+    line-height: 100px;
+}
+
+header a{/*elenco home*/
+    font-size: 20px;
+    text-transform: uppercase;
+    color: white;
+    font-style: normal;
+}
 
 /* MAIN */
 
 /* ELEMENTI NEL MAIN - ARTICLE */
 
+main{/*sfondo bianco*/
+    background-color: white;
+    line-height: 30px;
+    outline: 2px solid rgb(190, 190, 190);
+}
+
+h1{ /*titolo*/
+    font-size: 32px;
+    line-height: 50px;
+    font-weight: bold;
+    margin-left: 10px;
+}
+
+.contatti{ /*mario rossi*/
+    color: gray;
+    line-height: 60px;
+    margin-left: 10px;
+}
+
+p{
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+p strong{
+    color: rgb(121, 5, 132);
+}
+
+ul li{ /*elenco punti*/
+    margin-left: 40px;
+}
+
+code{
+    background-color: rgb(222, 222, 222);
+    border-radius: 5px;
+    outline: 1px solid rgb(142, 142, 142);
+}
+
+ol li{
+    margin-left: 40px;
+
+}
+
 /* TABELLE */
+
+caption{
+    font-style:oblique;
+    text-align: center;
+    line-height: 60px;
+}
+
+p a{
+    color: rgb(0, 163, 208);
+}
+
+iframe{/*video*/
+    width: 380px;
+    height: 210px;
+    margin-left: 15px;
+    margin-right: 10px;
+    border-radius: 20px;
+}
 
 /* FORM */
 
+section{
+    text-align: center;
+    background-color: rgb(222, 222, 222);
+    width: 380px;
+    height: 210px;
+    margin-left: 15px;
+    margin-right: 10px;
+    line-height: 30px;
+}
+
+section h2{
+    font-size: 25px;
+    text-transform: uppercase;
+    margin-top: 30px;
+}
+
+section p{
+    text-align: left;
+}
+
+button{
+    background-color: rgb(36, 102, 172);
+    color: white;
+}
+
 /* ELEMENTI NELL' ASIDE */
 
-/* FOOTER */
+aside h2{
+    font-size: 25px;
+    text-transform: uppercase;
+    margin-top: 30px;
+    text-align: center;
+}
 
+aside a{
+    text-align: left;
+    color: rgb(0, 163, 208);
+    font-size: 20px;
+}
+
+.container3{
+    text-align: center;
+    background-color: rgb(222, 222, 222);
+    width: 380px;
+    height: 150px;
+    margin-left: 15px;
+    margin-right: 10px;
+    margin-top: 20px;
+    line-height: 30px;
+    outline: 1px solid rgb(142, 142, 142);
+}
+
+.container4{
+    text-align: center;
+    background-color: rgb(222, 222, 222);
+    width: 380px;
+    height: 150px;
+    margin-left: 15px;
+    margin-right: 10px;
+    line-height: 30px;
+    margin-top: 20px;
+    outline: 1px solid rgb(142, 142, 142);
+}
+
+.container5{
+    text-align: center;
+    background-color: rgb(222, 222, 222);
+    width: 380px;
+    height: 150px;
+    margin-left: 15px;
+    margin-right: 10px;
+    line-height: 30px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    outline: 1px solid rgb(142, 142, 142);
+}
+
+
+/* FOOTER */
+.container6{
+    text-align: center;
+    background-color: rgb(4, 72, 58);
+    color: white;
+    width: 400px;
+    height: 150px;
+    margin-left: 10px;
+    margin-right: 10px;
+    line-height: 30px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+footer a{
+    color: rgb(255, 44, 234);
+}
+
+footer p{
+    text-align: center;
+}
+
+footer address{
+    line-height: 30px;
+}
