--- a/m1/w1/d5/start-20220401T085759Z-001/start/assets/css/stile.css
+++ b/m1/w1/d5/start-20220401T085759Z-001/start/assets/css/stile.css
@@ -26,10 +26,10 @@ main{/*sfondo*/
 }
 
 
-nav p{
-    margin-top: 4rem;
+nav.introduzione{
     margin-left: 5rem;
     margin-right: 5rem;
+    margin-bottom: 10rem;
     font-size: 2rem;
     color: #000000;
     line-height: 4rem;
@@ -67,6 +67,7 @@ img.pc{
 
 img.ufficio{
     width: 50rem;
+
 }
 
 img.tastiera{
@@ -139,7 +140,7 @@ footer{
     margin:5rem;
     height: 30rem;
     margin-top: 315rem;
-    padding-top: 10rem;
+    padding-top: 2rem;
 }
 
 footer a, address{
@@ -150,4 +151,9 @@ footer a, address{
 footer h2{
     font-weight: bold;
     line-height: 8rem;
+}
+
+footer p{
+    color: white;
+    font-size: 2rem;
 }
