--- a/m1/w2/d2/Lezione/Float/css/stile.css
+++ b/m1/w2/d2/Lezione/Float/css/stile.css
@@ -3,3 +3,35 @@ img{
     padding-right: 15px;
     padding-bottom: 5px;
 }
+
+.blog{
+    background-color: aqua;
+}
+
+.blog article{
+    width: 30%;
+    height: 300px;
+    background-color: red;
+    float: left;
+    font-size: 3rem;
+    color: white;
+    text-align: center;
+}
+
+.blog article:last-child{
+    clear: both;
+}
+
+.blog.article-right article{
+    float: right;
+}
+
+#foto{
+    background-image: url("https://picsum.photos/id/237/200/300");
+    height: 300px;
+}
+
+.clearfix{
+    clear: both;
+    opacity: 0;
+}
