--- a/m1/w2/d2/esercizio/start-20220401T100718Z-001/start/assets/css/stile.css
+++ b/m1/w2/d2/esercizio/start-20220401T100718Z-001/start/assets/css/stile.css
@@ -23,9 +23,15 @@ header {
     margin-bottom: 1.5em;
     padding: 2em 1.5em;
 }
+
+nav ul li{
+    display: inline-block;
+}
+
 header div img {
     margin-bottom: 20px;
 }
+
 header nav ul {
     margin: 0;
 }
@@ -71,6 +77,14 @@ h1 {
     letter-spacing: -0.03em;
     margin-bottom: 0.7em;
 }
+
+#img-html{
+    float: left;
+    border: 3px solid rgb(0, 135, 176);
+    margin-right: 1rem;
+    margin-top: 0.5rem;
+}
+
 p, address, ul, ol, dl, blockquote {
     margin-bottom: 1.2em;
 }
