--- a/m1/w2/d3/Esercizio/start-20220401T103137Z-001/start/assets/css/stile.css
+++ b/m1/w2/d3/Esercizio/start-20220401T103137Z-001/start/assets/css/stile.css
@@ -38,26 +38,28 @@ body {
 hr {display: none;} /* rimuove l'elemento */
 
 /* BUTTON FIXED */
-.toTop {
+/* BUTTON */
+
+.social{
     position: fixed;
-    bottom: 10px;
-    right: -7px;
-}
-.social {
-    position: fixed;
-    bottom: 20vh;
-    right: -7px;
-}
-.toTop a, .social a {
-    color: #c77ea2;
-    font-size: 4rem;
+    bottom: 50%;
+    right: 1.6rem;
+    width: 1.6rem;
+    height: 1rem;
+    color: rgb(45, 101, 185);
+    font-size: 2rem;
     display: block;
 }
-    .social a {
-        color: rgb(45, 101, 185);
-    }
-.toTop .far, .social .far {
-    background: white;
+
+.top a{
+    position: fixed;
+    bottom: 10%;
+    right: 1.6rem;
+    width: 1.6rem;
+    height: 1rem;
+    color: rgb(242, 109, 0);
+    font-size: 2rem;
+    display: block;
 }
 
 /* HEADER */
@@ -271,7 +273,7 @@ aside h2 {
     text-transform: uppercase;
     margin-bottom: 1em;
 }
-aside div {
+aside div{
     background-color: #e3e3e3;
     border: 1px solid #c3c3c3;
     margin-bottom: 1em;
