--- a/m1/w2/d3/Esercizio/start-20220401T103137Z-001/start/assets/css/flex.css
+++ b/m1/w2/d3/Esercizio/start-20220401T103137Z-001/start/assets/css/flex.css
@@ -13,11 +13,13 @@ iframe{
     .container{
         display: flex;
         justify-content: center;
+        align-items: center;
     }
 
     .articoli{
         display: flex;
         flex-direction: row;
+        gap: 1rem;
         justify-content: space-evenly;
         font-size: 80%; 
     }
