--- a/m1/w2/d3/Lezione/grid/css/stile.css
+++ b/m1/w2/d3/Lezione/grid/css/stile.css
@@ -72,3 +72,10 @@ h3{
 #n3 .blocco:nth-child(4){
     grid-area: footer;
 }
+
+
+#n4{
+    grid-template-columns: repeat(3, 1fr) MinMax(20px, 40%);
+    grid-template-rows: repeat(2,100px) 300px;
+    grid-gap: 20px;
+}
