--- a/m1/w2/d4/Esercizio/start1-20220323T100343Z-001/start1/postit.css
+++ b/m1/w2/d4/Esercizio/start1-20220323T100343Z-001/start1/postit.css
@@ -19,36 +19,27 @@ h1{
     gap: 20px;
 }
 
-.postit-yellow {
+.postit-yellow, .postit-green, .postit-pink, .postit-blue{
     width: 150px;
     height: 100px;
-    background-color: yellow;
     text-align: center;
     box-shadow: 3px 3px 3px rgb(202, 202, 202);
+}
+
+.postit-yellow {
+    background-color: yellow;
 }
 
 .postit-green {
-    width: 150px;
-    height: 100px;
     background-color: greenyellow;
-    text-align: center;
-    box-shadow: 3px 3px 3px rgb(202, 202, 202);
 }
 
 .postit-pink {
-    width: 150px;
-    height: 100px;
     background-color: rgb(220, 89, 179);
-    text-align: center;
-    box-shadow: 3px 3px 3px rgb(202, 202, 202);
 }
 
 .postit-blue {
-    width: 150px;
-    height: 100px;
     background-color: rgb(0, 225, 255);
-    text-align: center;
-    box-shadow: 3px 3px 3px rgb(202, 202, 202);
 }
 
 .postit-yellow:hover {
