--- a/m1/w2/d5/start-20220323T114750Z-001/start/assets/css/stile.css
+++ b/m1/w2/d5/start-20220323T114750Z-001/start/assets/css/stile.css
@@ -110,13 +110,15 @@ i{
     align-items: center;
     margin-top: 5rem;
     margin-bottom: 5rem;
+    margin-right: -2.5rem;
+    margin-left: -2.5rem;
 }
 
-#sfondo-blu h3, #sfondo-blu h4{
+#sfondo-blu h2, #sfondo-blu h4{
     color: white;
 }
 
-#sfondo-blu h3{
+#sfondo-blu h2{
     padding-top: 3rem;
 }
 
@@ -135,9 +137,6 @@ i{
 /* FOOTER */
 
 footer{
-    display: flex;
-    flex-direction: column;
-    text-align:left;
     background-color: rgb(238, 238, 238);
     padding: 3.5rem;
 }
@@ -179,17 +178,90 @@ form{
         margin-top: 3rem;
         margin-bottom: 3rem;
     }
+
+    #sfondo-blu{
+        margin-right: 0rem;
+        margin-left: 0rem;
+    }
+
+    .paragrafo4{
+        display: flex;
+        flex-direction: column;
+        text-align: left;
+    }
+
 }
 
-@media screen and (min-width:480px){
+@media screen and (min-width:768px){
     
     #banner{
-        padding: 5rem;
+        padding: 7rem;
     }
 
     .paragrafi1{
         display: flex;
         flex-direction: row;
+        justify-content: space-between;
+        gap: 2rem;
+    }
+
+    .paragrafi1 h4{
+        text-align:left;
+    }
+
+    #sfondo-blu{
+        margin-right: -2.5rem;
+        margin-left: -2.5rem;
+        margin-top: -2rem;
+    }
+
+    .paragrafi2{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        gap: 2rem;
+        text-align: left;
+    }
+
+    .paragrafi2 img{
+        width: 45rem;
+    }
+
+    .paragrafi3{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .paragrafo4{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        gap: 2rem;
+    }
+
+    .paragrafo5{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        margin-top: 3rem;
+    }
+
+}
+
+@media screen and (min-width:1024px){
+    .paragrafi1, .paragrafo4 {
+        margin-left: 10rem;
+        margin-right: 10rem;
+    }
+
+    #banner{
+        padding-left: 25rem;
+        padding-right: 25rem;
+    }
+
+    #sfondo-blu{
+        padding-top: 5rem;
     }
 
 }
