--- a/m1/w2/d5/start-20220323T114750Z-001/start/assets/css/stile.css
+++ b/m1/w2/d5/start-20220323T114750Z-001/start/assets/css/stile.css
@@ -6,15 +6,6 @@ html {font-size: 62.5%;}
     margin: 0 auto;
 }
 
-label{
-    display: none;
-}
-
-.navbar{
-    display: flex;
-    flex-direction: row;
-}
-
 body{
     font-family: 'Fira Sans', sans-serif; 
     text-align: center;   
@@ -46,7 +37,7 @@ h3{
 }
 
 h4{
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     margin-bottom: 3rem;
 }
 
@@ -65,6 +56,39 @@ a, form{
 
 
 /* HEADER */
+
+.navbar{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    height: 5rem;
+    box-shadow: 0 0 25px #d3d3d3;
+}
+
+.navbar i{
+    padding-top: 0.5rem;
+    padding-right: 3rem;
+}
+
+#menu{
+    display: none;
+}
+
+li a{
+    background: none;
+    color:rgb(0, 0, 0);
+  }
+
+#menu > li{
+    margin: 0 1rem;
+    overflow: hidden;
+    transition: all 0.3s;
+}
+
+#toggle {
+    display: none;
+}
 
 
 /* MAIN */
@@ -163,6 +187,32 @@ form{
     text-align: center;
 }
 
+#sfondo-grigio input{
+    height: 3rem;
+    width: 23rem;
+}
+
+
+
+/*ANIMAZIONE*/
+
+#banner a:hover{
+    animation-name: animazione;
+    animation-duration: 2s;
+}
+
+@keyframes animazione{
+    0% {box-shadow:none
+    }
+    50% {box-shadow:7px  7px 2px #000000,
+        -7px -7px 2px #000000,
+         7px -7px 2px #000000,
+        -7px  7px 2px #000000;
+    }
+    100% {box-shadow:none
+    }
+}
+
 
 
 
@@ -170,9 +220,13 @@ form{
 
 @media screen and (min-width:320px) {
 
+    /*HEADER*/
+
     .navbar{
         margin: 1rem;
     }
+
+    /*MAIN*/
 
     .banner h4{
         margin-top: 3rem;
@@ -180,9 +234,11 @@ form{
     }
 
     #sfondo-blu{
-        margin-right: 0rem;
-        margin-left: 0rem;
+        margin-right: 1rem;
+        margin-left: 1rem;
     }
+
+    /*FOOTER*/
 
     .paragrafo4{
         display: flex;
@@ -193,6 +249,34 @@ form{
 }
 
 @media screen and (min-width:768px){
+
+    .navbar i{
+        display: none;
+    }
+
+    #menu{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        height: 5rem;
+    }
+    
+    nav a{
+        background:none;
+        color: black;
+    }
+
+    #registrati{
+        background: linear-gradient(90deg, #6cc1e2 0%, #392f7a 80%);
+        color:white;
+        padding: 1rem;
+        font-size: 1.8rem;
+        text-decoration: none;
+    }
+    
+
+    /*MAIN*/
     
     #banner{
         padding: 7rem;
@@ -232,6 +316,8 @@ form{
         flex-direction: column;
     }
 
+    /*FOOTER*/
+
     .paragrafo4{
         display: flex;
         flex-direction: row;
@@ -250,6 +336,9 @@ form{
 }
 
 @media screen and (min-width:1024px){
+
+    /*MAIN*/
+
     .paragrafi1, .paragrafo4 {
         margin-left: 10rem;
         margin-right: 10rem;
