--- a/m2/w1/d5/PROGETTO-start-20220405T141346Z-001/PROGETTO-start/css/style.css
+++ b/m2/w1/d5/PROGETTO-start-20220405T141346Z-001/PROGETTO-start/css/style.css
@@ -68,6 +68,7 @@
     animation-duration: .5s;
     background-color:white;
     border: 3px solid #8b8aed;
+    opacity: 20%;
     border-radius: 10px;
 }
 
