--- a/m2/w2/d3/Homework-m2-w2-d3/scss/style.scss
+++ b/m2/w2/d3/Homework-m2-w2-d3/scss/style.scss
@@ -46,6 +46,12 @@ img{
     margin: 2rem 0;
     border-radius: 10px;
     transition: transform 0.3s;
+    @media screen and (min-width: 768px){
+        max-width: 40%;
+    }
+    @media screen and (min-width: 1500px){
+        max-width: 30%;
+    }
 }
 
 body{
