--- a/m2/w2/d5/Homework-M2-W2-D5/sass/_functions.scss
+++ b/m2/w2/d5/Homework-M2-W2-D5/sass/_functions.scss
@@ -1,9 +1,9 @@
 @function contrast($color){
 
     @if(lightness($color)>50){
-        @return lighten($color, 15%);
+        @return  black;
     }
     @else{
-        @return darken($color,15%);
+        @return white;
     }
 }
