--- a/m2/w2/d5/Homework-M2-W2-D5/sass/_functions.scss
+++ b/m2/w2/d5/Homework-M2-W2-D5/sass/_functions.scss
@@ -1,7 +1,7 @@
-@function contrast($color){
+@function blackOrWhite($color){
 
     @if(lightness($color)>50){
-        @return  black;
+        @return black;
     }
     @else{
         @return white;
